# EntityRestService

./: .gitignore  EntityRestService.cabal  README.md
data/: Store.4711.txt  User.2345.txt  calc.4711.txt  calc.4712.json  store.4712.json
src/Client/: Main.hs
src/Server/: Backend.hs  ErrorHandler.hs  HaskellShow.hs  Main.hs
src/Shared/: Entities.hs
